--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,8 @@ chrome-user-data
 *.swp
 *.swo
 
+config.env
+
 packages/react-devtools-core/dist
 packages/react-devtools-extensions/chrome/build
 packages/react-devtools-extensions/chrome/*.crx
